@@ -19,11 +19,20 @@
 
 package com.pig4cloud.pig.admin.service.impl;
 
-import cn.hutool.core.collection.CollUtil;
-import cn.hutool.core.lang.tree.Tree;
-import cn.hutool.core.lang.tree.TreeNode;
-import cn.hutool.core.lang.tree.TreeUtil;
-import cn.hutool.core.util.StrUtil;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+
+import org.springframework.beans.BeanUtils;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.validation.BindingResult;
+
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.pig4cloud.pig.admin.api.entity.SysDept;
@@ -32,14 +41,13 @@ import com.pig4cloud.pig.admin.mapper.SysDeptMapper;
 import com.pig4cloud.pig.admin.service.SysDeptService;
 import com.pig4cloud.pig.common.core.util.R;
 import com.pig4cloud.plugin.excel.vo.ErrorMessage;
-import lombok.AllArgsConstructor;
-import org.springframework.beans.BeanUtils;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.validation.BindingResult;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.lang.tree.Tree;
+import cn.hutool.core.lang.tree.TreeNode;
+import cn.hutool.core.lang.tree.TreeUtil;
+import cn.hutool.core.util.StrUtil;
+import lombok.AllArgsConstructor;
 
 /**
  * 部门管理服务实现类
@@ -64,7 +72,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
 	@Transactional(rollbackFor = Exception.class)
 	public Boolean removeDeptById(Long id) {
 		// 级联删除部门
-		List<Long> idList = this.listDescendant(id).stream().map(SysDept::getDeptId).collect(Collectors.toList());
+		List<Long> idList = this.listDescendants(id).stream().map(SysDept::getDeptId).toList();
 
 		Optional.ofNullable(idList).filter(CollUtil::isNotEmpty).ifPresent(this::removeByIds);
 
@@ -77,7 +85,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
 	 * @return 部门树结构列表，模糊查询时返回平铺列表
 	 */
 	@Override
-	public List<Tree<Long>> selectTree(String deptName) {
+	public List<Tree<Long>> getDeptTree(String deptName) {
 		// 查询全部部门
 		List<SysDept> deptAllList = deptMapper
 			.selectList(Wrappers.<SysDept>lambdaQuery().like(StrUtil.isNotBlank(deptName), SysDept::getName, deptName));
@@ -98,7 +106,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
 				treeNode.setExtra(extra);
 				return treeNode;
 			})
-			.collect(Collectors.toList());
+			.toList();
 
 		// 模糊查询 不组装树结构 直接返回 表格方便编辑
 		if (StrUtil.isNotBlank(deptName)) {
@@ -107,7 +115,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
 				tree.putAll(node.getExtra());
 				BeanUtils.copyProperties(node, tree);
 				return tree;
-			}).collect(Collectors.toList());
+			}).toList();
 		}
 
 		return TreeUtil.build(collect, 0L);
@@ -118,7 +126,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
 	 * @return 部门Excel视图对象列表，包含部门名称、父部门名称和排序号
 	 */
 	@Override
-	public List<DeptExcelVo> listExcelVo() {
+	public List<DeptExcelVo> exportDepts() {
 		List<SysDept> list = this.list();
 		List<DeptExcelVo> deptExcelVos = list.stream().map(item -> {
 			DeptExcelVo deptExcelVo = new DeptExcelVo();
@@ -131,7 +139,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
 			deptExcelVo.setParentName(first.orElse("根部门"));
 			deptExcelVo.setSortOrder(item.getSortOrder());
 			return deptExcelVo;
-		}).collect(Collectors.toList());
+		}).toList();
 		return deptExcelVos;
 	}
 
@@ -184,7 +192,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
 	 * @return 包含目标部门及其所有子部门的列表
 	 */
 	@Override
-	public List<SysDept> listDescendant(Long deptId) {
+	public List<SysDept> listDescendants(Long deptId) {
 		// 查询全部部门
 		List<SysDept> allDeptList = baseMapper.selectList(Wrappers.emptyWrapper());
 
@@ -193,9 +201,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
 		recursiveDept(allDeptList, deptId, resDeptList);
 
 		// 添加当前节点
-		resDeptList.addAll(allDeptList.stream()
-			.filter(sysDept -> deptId.equals(sysDept.getDeptId()))
-			.collect(Collectors.toList()));
+		resDeptList.addAll(allDeptList.stream().filter(sysDept -> deptId.equals(sysDept.getDeptId())).toList());
 		return resDeptList;
 	}
 
