@@ -16,8 +16,13 @@
  */
 package com.pig4cloud.pig.admin.service.impl;
 
-import cn.hutool.core.bean.BeanUtil;
-import cn.hutool.core.collection.CollUtil;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+
+import org.springframework.stereotype.Service;
+import org.springframework.validation.BindingResult;
+
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.pig4cloud.pig.admin.api.entity.SysPost;
@@ -28,13 +33,9 @@ import com.pig4cloud.pig.common.core.exception.ErrorCodes;
 import com.pig4cloud.pig.common.core.util.MsgUtils;
 import com.pig4cloud.pig.common.core.util.R;
 import com.pig4cloud.plugin.excel.vo.ErrorMessage;
-import org.springframework.stereotype.Service;
-import org.springframework.validation.BindingResult;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import cn.hutool.core.bean.BeanUtil;
+import cn.hutool.core.collection.CollUtil;
 
 /**
  * 岗位信息表服务实现类
@@ -92,14 +93,14 @@ public class SysPostServiceImpl extends ServiceImpl<SysPostMapper, SysPost> impl
 	 * @return 岗位Excel导出对象列表
 	 */
 	@Override
-	public List<PostExcelVO> listPost() {
+	public List<PostExcelVO> listPosts() {
 		List<SysPost> postList = this.list(Wrappers.emptyWrapper());
 		// 转换成execl 对象输出
 		return postList.stream().map(post -> {
 			PostExcelVO postExcelVO = new PostExcelVO();
 			BeanUtil.copyProperties(post, postExcelVO);
 			return postExcelVO;
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 	/**
