@@ -1,6 +1,13 @@
 package com.pig4cloud.pig.codegen.service.impl;
 
-import cn.hutool.core.text.NamingCase;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.concurrent.atomic.AtomicInteger;
+
+import org.springframework.stereotype.Service;
+
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.pig4cloud.pig.codegen.entity.GenFieldType;
@@ -8,15 +15,9 @@ import com.pig4cloud.pig.codegen.entity.GenTableColumnEntity;
 import com.pig4cloud.pig.codegen.mapper.GenFieldTypeMapper;
 import com.pig4cloud.pig.codegen.mapper.GenTableColumnMapper;
 import com.pig4cloud.pig.codegen.service.GenTableColumnService;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
 
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+import cn.hutool.core.text.NamingCase;
+import lombok.RequiredArgsConstructor;
 
 /**
  * 表字段信息管理服务实现类
@@ -80,9 +81,7 @@ public class GenTableColumnServiceImpl extends ServiceImpl<GenTableColumnMapper,
 	@Override
 	public void updateTableField(String dsName, String tableName, List<GenTableColumnEntity> tableFieldList) {
 		AtomicInteger sort = new AtomicInteger();
-		this.updateBatchById(tableFieldList.stream()
-			.peek(field -> field.setSort(sort.getAndIncrement()))
-			.collect(Collectors.toList()));
+		this.updateBatchById(tableFieldList.stream().peek(field -> field.setSort(sort.getAndIncrement())).toList());
 	}
 
 }
